--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,19 @@
          <artifactId>jboss-ejb-api_3.2_spec</artifactId>
          <scope>provided</scope>
       </dependency>
+     <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.0</version>
+            <scope>provided</scope>
+        </dependency>
+
       
       <dependency>
 	    <groupId>javax</groupId>
