--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
         </exclusion>
     </exclusions>
 </dependency>
+	   <dependency>
 	    <groupId>javax.websocket</groupId>
 	    <artifactId>javax.websocket-api</artifactId>
 	    <version>1.0</version>
