--- a/pom.xml
+++ b/pom.xml
@@ -56,64 +56,30 @@
          <artifactId>jboss-ejb-api_3.2_spec</artifactId>
          <scope>provided</scope>
       </dependency>
-     <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
-            <scope>provided</scope>
-        </dependency>
-      <dependency>
-          <groupId>javax.servlet.jsp</groupId>
-          <artifactId>jsp-api</artifactId>
-          <version>2.2</version>
-          <scope>provided</scope>
-     </dependency>
-     <dependency>
-         <groupId>taglibs</groupId>
-         <artifactId>standard</artifactId>
-        <version>1.1.2</version>
-     </dependency>
+      
       <dependency>
 	    <groupId>javax</groupId>
 	    <artifactId>javaee-web-api</artifactId>
 	    <version>6.0</version>
 	    <scope>provided</scope>
 	  </dependency>
-<dependency>
-    <groupId>commons-logging</groupId>
-    <artifactId>commons-logging-api</artifactId>
-    <version>1.1</version>
-    <exclusions>
-        <exclusion>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-        </exclusion>
-    </exclusions>
-</dependency>
-	   <dependency>
+	  <dependency>
 	    <groupId>javax.websocket</groupId>
 	    <artifactId>javax.websocket-api</artifactId>
 	    <version>1.0</version>
 	</dependency>
-	   
-</dependency>
-	<dependency>
-          <groupId>jakarta.servlet.jsp.jstl</groupId>
-          <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
-          <version>3.0.0</version>
-        </dependency>
-       <dependency>
-          <groupId>org.glassfish.web</groupId>
-          <artifactId>jakarta.servlet.jsp.jstl</artifactId>
-          <version>3.0.1</version>
-       </dependency>
+		<dependency>
+	    <groupId>jstl</groupId>
+	    <artifactId>jstl</artifactId>
+	    <version>1.2</version>
+	</dependency>
    </dependencies>
    <build>
       <finalName>${project.artifactId}</finalName>
       <plugins>
          <plugin>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.8.0</version>
+            <version>2.3.1</version>
             <configuration>
                <source>1.8</source>
                <target>1.8</target>
@@ -121,7 +87,7 @@
          </plugin>
          <plugin>
             <artifactId>maven-war-plugin</artifactId>
-            <version>3.2.2</version>
+            <version>2.1.1</version>
             <configuration>
                <!-- Java EE 6 doesn't require web.xml, Maven needs to catch up! -->
                <failOnMissingWebXml>false</failOnMissingWebXml>
