--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,15 @@
 	    <version>6.0</version>
 	    <scope>provided</scope>
 	  </dependency>
-	  <dependency>
+	       </dependency>
+    <!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+      <scope>provided</scope>
+    </dependency>
+       <dependency>
 	    <groupId>javax.websocket</groupId>
 	    <artifactId>javax.websocket-api</artifactId>
 	    <version>1.0</version>
