--- a/pom.xml
+++ b/pom.xml
@@ -79,12 +79,12 @@
 	   <dependency>
     <groupId>jakarta.servlet.jsp.jstl</groupId>
     <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
-    <version>3.0.0</version>
+    <version>2.0.0</version>
 </dependency>
 <dependency>
     <groupId>org.glassfish.web</groupId>
     <artifactId>jakarta.servlet.jsp.jstl</artifactId>
-    <version>3.0.1</version>
+    <version>2.0.0</version>
 </dependency>
 
        <dependency>
@@ -93,7 +93,7 @@
 	    <version>1.0</version>
 	</dependency>
 		<dependency>
-	    <groupId>jstl</groupId>
+	    <groupId>javax.servlet</groupId>
 	    <artifactId>jstl</artifactId>
 	    <version>1.2</version>
 	</dependency>
