--- a/pom.xml
+++ b/pom.xml
@@ -87,11 +87,14 @@
     <version>2.0.0</version>
 </dependency>
 
-       <dependency>
-	    <groupId>javax.websocket</groupId>
-	    <artifactId>javax.websocket-api</artifactId>
-	    <version>1.0</version>
-	</dependency>
+       <!-- https://mvnrepository.com/artifact/jakarta.websocket/jakarta.websocket-api -->
+<dependency>
+    <groupId>jakarta.websocket</groupId>
+    <artifactId>jakarta.websocket-api</artifactId>
+    <version>2.1.1</version>
+    <scope>provided</scope>
+</dependency>
+
 		<dependency>
 	    <groupId>javax.servlet</groupId>
 	    <artifactId>jstl</artifactId>
