--- a/pom.xml
+++ b/pom.xml
@@ -91,9 +91,17 @@
 <dependency>
     <groupId>jakarta.websocket</groupId>
     <artifactId>jakarta.websocket-api</artifactId>
-    <version>1.1.2</version>
+    <version>2.1.1</version>
     <scope>provided</scope>
 </dependency>
+	   <!-- https://mvnrepository.com/artifact/jakarta.websocket/jakarta.websocket-client-api -->
+<dependency>
+    <groupId>jakarta.websocket</groupId>
+    <artifactId>jakarta.websocket-client-api</artifactId>
+    <version>2.1.1</version>
+    <scope>provided</scope>
+</dependency>
+
 
 		<dependency>
 	    <groupId>javax.servlet</groupId>
