--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
        <artifactId>jakarta.servlet.jsp.jstl</artifactId>
        <version>2.0.0</version>
      </dependency>
+	<dependency>
+    <groupId>org.glassfish.web</groupId>
+    <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+    <version>2.0.0</version>
+</dependency>
 
        <!-- https://mvnrepository.com/artifact/jakarta.websocket/jakarta.websocket-api -->
      <dependency>
